--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -201,9 +201,16 @@ if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   option(ENABLE_XKBCOMMON "Enable xkbcommon string typing support" ${ENABLE_XKBCOMMON_DEFAULT})
   if(ENABLE_XKBCOMMON)
     target_compile_definitions(keymapper PRIVATE ENABLE_XKBCOMMON)
+    if(XKBCOMMON_VERSION VERSION_GREATER_EQUAL 1.6)
+      target_compile_definitions(keymapper PRIVATE ENABLE_XKBCOMMON_COMPOSE)
+    endif()
   endif()
 
-  option(ENABLE_X11 "Enable X11 context update support" TRUE)
+  find_package(X11)
+  if(X11_FOUND)
+    set(ENABLE_X11_DEFAULT TRUE)
+  endif()
+  option(ENABLE_X11 "Enable X11 context update support" ${ENABLE_X11_DEFAULT})
   if(ENABLE_X11)
     target_compile_definitions(keymapper PRIVATE ENABLE_X11)
     target_link_libraries(keymapper X11)
