Disabled MSVC Whole Program Optimization in Debug builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,8 +25,9 @@ endif()
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if(MSVC)
-  add_compile_options(/GR- /GL /Os /MP /W4 /permissive- /wd4100)
+  add_compile_options(/GR- /Os /MP /W4 /permissive- /wd4100)
   add_link_options($<$<CONFIG:RELEASE>:/LTCG>)
+  add_compile_options($<$<CONFIG:RELEASE>:/GL>)
   add_compile_options($<$<CONFIG:RELEASE>:/MT>)
   add_compile_definitions(_CRT_SECURE_NO_WARNINGS _WINSOCK_DEPRECATED_NO_WARNINGS)
 else()
