--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,21 +354,27 @@ source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR}/src FILES
   ${SOURCES_RUNTIME} ${SOURCES_CONFIG} ${SOURCES_CLIENT} ${SOURCES_SERVER} ${SOURCES_COMMON} ${SOURCES_TEST})
 
 # install
+set(DOC_FILES LICENSE README.md CHANGELOG.md)
+set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME Application)
+
 set(TARGETS keymapper keymapperd keymapperctl)
 if(CMAKE_SYSTEM_NAME MATCHES "Linux")
   SET(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
 
-  install(TARGETS ${TARGETS} DESTINATION bin COMPONENT Application)
-  install(DIRECTORY extra/share/ DESTINATION share COMPONENT Application)
+  install(TARGETS ${TARGETS} DESTINATION bin)
+  install(DIRECTORY extra/share/ DESTINATION share)
   install(FILES extra/icon.svg DESTINATION share/icons/hicolor/scalable/apps
-          RENAME "io.github.houmain.keymapper.svg" COMPONENT Application)
-  install(DIRECTORY extra/lib/ DESTINATION lib COMPONENT Application)
-  install(DIRECTORY extra/xdg DESTINATION ../etc COMPONENT Application)
+          RENAME io.github.houmain.keymapper.svg)
+  install(DIRECTORY extra/lib/ DESTINATION lib)
+  install(DIRECTORY extra/xdg DESTINATION ../etc)
+  install(FILES ${DOC_FILES} DESTINATION share/docs/keymapper)
 elseif(CMAKE_SYSTEM_NAME MATCHES "Darwin")
-  install(TARGETS ${TARGETS} DESTINATION "bin" COMPONENT Application)
-  install(FILES extra/keymapper-launchd DESTINATION "bin" COMPONENT Application)
+  install(TARGETS ${TARGETS} DESTINATION bin)
+  install(FILES extra/keymapper-launchd DESTINATION bin)
+  install(FILES ${DOC_FILES} DESTINATION share/docs/keymapper)
 else()
-  install(TARGETS ${TARGETS} DESTINATION . COMPONENT Application)
+  install(TARGETS ${TARGETS} DESTINATION .)
+  install(FILES ${DOC_FILES} DESTINATION .)
 endif()
 
 # package
@@ -379,9 +385,8 @@ set(CPACK_PACKAGE_VENDOR "Albert Kalchmair")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "keymapper")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/houmain/keymapper")
 set(CPACK_PACKAGE_CONTACT ${CPACK_PACKAGE_HOMEPAGE_URL})
-set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
-set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
+set(CPACK_RESOURCE_FILE_LICENSE LICENSE)
+set(CPACK_PACKAGE_ICON src/common/icon.ico)
 
 set(CPACK_STRIP_FILES TRUE)
 if(VERSION MATCHES "^[0-9]+\.[0-9]+\.[0-9]+")
@@ -394,14 +399,14 @@ endif()
 if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   set(CPACK_GENERATOR WIX)
   set(CPACK_WIX_EXTENSIONS WixUtilExtension)
-  set(CPACK_WIX_PATCH_FILE "${CMAKE_SOURCE_DIR}/extra/wix-patch-file.xml")
+  set(CPACK_WIX_PATCH_FILE extra/wix-patch-file.xml)
   set(CPACK_WIX_UPGRADE_GUID "D3B4DADB-1A7E-40B3-A6F0-EEB022317FC8")
 
-  set(CPACK_WIX_PRODUCT_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
-  set(CPACK_WIX_UI_DIALOG "${CMAKE_SOURCE_DIR}/extra/wix-dialog.png")
-  set(CPACK_WIX_UI_BANNER "${CMAKE_SOURCE_DIR}/extra/wix-banner.png")
+  set(CPACK_WIX_PRODUCT_ICON src/common/icon.ico)
+  set(CPACK_WIX_UI_DIALOG extra/wix-dialog.png)
+  set(CPACK_WIX_UI_BANNER extra/wix-banner.png)
 
-  file(READ  "${CMAKE_SOURCE_DIR}/LICENSE" LICENSE_RTF)
+  file(READ LICENSE LICENSE_RTF)
   string(REPLACE "\n" "\\par" LICENSE_RTF "${LICENSE_RTF}")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf" "{\\rtf1\\ansi\\deff0\\nouicompat{\\fonttbl{\\f0\\fnil\\fcharset0 Sans Serif;}}\\fs18 ${LICENSE_RTF} }")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf")
