Bundling documentation. 2nd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -385,8 +385,8 @@ set(CPACK_PACKAGE_VENDOR "Albert Kalchmair")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "keymapper")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/houmain/keymapper")
 set(CPACK_PACKAGE_CONTACT ${CPACK_PACKAGE_HOMEPAGE_URL})
-set(CPACK_RESOURCE_FILE_LICENSE LICENSE)
-set(CPACK_PACKAGE_ICON src/common/icon.ico)
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE")
+set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
 
 set(CPACK_STRIP_FILES TRUE)
 if(VERSION MATCHES "^[0-9]+\.[0-9]+\.[0-9]+")
@@ -399,14 +399,14 @@ endif()
 if(CMAKE_SYSTEM_NAME MATCHES "Windows")
   set(CPACK_GENERATOR WIX)
   set(CPACK_WIX_EXTENSIONS WixUtilExtension)
-  set(CPACK_WIX_PATCH_FILE extra/wix-patch-file.xml)
+  set(CPACK_WIX_PATCH_FILE "${CMAKE_SOURCE_DIR}/extra/wix-patch-file.xml")
   set(CPACK_WIX_UPGRADE_GUID "D3B4DADB-1A7E-40B3-A6F0-EEB022317FC8")
 
-  set(CPACK_WIX_PRODUCT_ICON src/common/icon.ico)
-  set(CPACK_WIX_UI_DIALOG extra/wix-dialog.png)
-  set(CPACK_WIX_UI_BANNER extra/wix-banner.png)
+  set(CPACK_WIX_PRODUCT_ICON "${CMAKE_SOURCE_DIR}/src/common/icon.ico")
+  set(CPACK_WIX_UI_DIALOG "${CMAKE_SOURCE_DIR}/extra/wix-dialog.png")
+  set(CPACK_WIX_UI_BANNER "${CMAKE_SOURCE_DIR}/extra/wix-banner.png")
 
-  file(READ LICENSE LICENSE_RTF)
+  file(READ "${CMAKE_SOURCE_DIR}/LICENSE" LICENSE_RTF)
   string(REPLACE "\n" "\\par" LICENSE_RTF "${LICENSE_RTF}")
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf" "{\\rtf1\\ansi\\deff0\\nouicompat{\\fonttbl{\\f0\\fnil\\fcharset0 Sans Serif;}}\\fs18 ${LICENSE_RTF} }")
   set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_BINARY_DIR}/LICENSE.rtf")
